<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="Task"
            type="com.knezevic.mobilenetworkinventorymanager_pis.model.Task" />

        <variable
            name="Distance"
            type="String" />

        <variable
            name="Technician"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.knezevic.mobilenetworkinventorymanager_pis.activities.SitesActivity">

        <com.google.android.gms.maps.MapView
            android:id="@+id/task_map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/distanceTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/white_drawable"
            android:padding="5dp"
            android:text="@{Distance}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/white_drawable"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSiteInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/aboutTask"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/about_task"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/taskTechnicianText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/task_technician"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="@{Technician.empty ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@+id/aboutTask" />

                <TextView
                    android:id="@+id/taskTechnician"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Technician}"
                    android:textSize="15sp"
                    android:visibility="@{Technician.empty ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@+id/taskTechnicianText" />

                <TextView
                    android:id="@+id/taskTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/task_description"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/taskTechnician" />

                <TextView
                    android:id="@+id/taskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Task.task_description}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/taskTextDescription" />

                <TextView
                    android:id="@+id/taskTextCategory"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/task_category"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/taskDescription" />

                <TextView
                    android:id="@+id/taskCategory"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Task.task_category_name}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/taskTextCategory" />

                <TextView
                    android:id="@+id/taskOpeningTimeText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/task_opening_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/taskCategory" />

                <TextView
                    android:id="@+id/taskOpeningTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Task.task_opening_time}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/taskOpeningTimeText" />

                <TextView
                    android:id="@+id/taskClosingTimeText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/task_closing_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/taskOpeningTime" />

                <TextView
                    android:id="@+id/taskClosingTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Task.task_closing_time}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/taskClosingTimeText" />

                <TextView
                    android:id="@+id/aboutSite"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/about_site"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/taskClosingTime" />

                <TextView
                    android:id="@+id/siteTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/aboutSite" />

                <TextView
                    android:id="@+id/siteAddress"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Task.site_address}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/siteTextAddress" />

                <TextView
                    android:id="@+id/siteTextDirections"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/directions"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/siteAddress" />

                <TextView
                    android:id="@+id/siteDirections"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Task.site_directions}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/siteTextDirections" />

                <TextView
                    android:id="@+id/siteTextTech"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/technology"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/siteDirections" />

                <TextView
                    android:id="@+id/siteTechs"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Task.siteTechs}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/siteTextTech" />

                <TextView
                    android:id="@+id/siteTextPowerSupply"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/power_supply"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/siteTechs" />

                <TextView
                    android:id="@+id/sitePowerSupply"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Task.site_power_supply}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/siteTextPowerSupply" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>