<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Site"
            type="com.knezevic.mobilenetworkinventorymanager_pis.model.Site" />

        <variable
            name="Distance"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.knezevic.mobilenetworkinventorymanager_pis.fragments.SiteDetailsFragment">

        <com.google.android.gms.maps.MapView
            android:id="@+id/site_map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/white_drawable"
            android:padding="5dp"
            android:text="@{Distance}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/white_drawable"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSiteInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/siteTextAddress"
                    style="@style/SiteDetailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/address"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/siteAddress"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Site.address}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/siteTextAddress" />

                <TextView
                    android:id="@+id/siteTextDirections"
                    style="@style/SiteDetailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/directions"
                    app:layout_constraintTop_toBottomOf="@+id/siteAddress" />

                <TextView
                    android:id="@+id/siteDirections"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Site.directions}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/siteTextDirections" />

                <TextView
                    android:id="@+id/siteTextTech"
                    style="@style/SiteDetailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/technology"
                    app:layout_constraintTop_toBottomOf="@+id/siteDirections" />

                <TextView
                    android:id="@+id/siteTechs"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Site.siteTechs}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/siteTextTech" />

                <TextView
                    android:id="@+id/siteTextPowerSupply"
                    style="@style/SiteDetailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/power_supply"
                    app:layout_constraintTop_toBottomOf="@+id/siteTechs" />

                <TextView
                    android:id="@+id/sitePowerSupply"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@{Site.power_supply}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/siteTextPowerSupply" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>