<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="UserViewModel"
            type="com.knezevic.mobilenetworkinventorymanager_pis.viewmodel.UserViewModel" />

        <variable
            name="User"
            type="com.knezevic.mobilenetworkinventorymanager_pis.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.knezevic.mobilenetworkinventorymanager_pis.fragments.ProfileFragment">

        <com.google.android.gms.maps.MapView
            android:id="@+id/profile_map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSiteInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/white_drawable"
            android:elevation="10dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_name"
                style="@style/SiteDetailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{User.name+` `+User.surname}"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/SiteDetailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_username"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{User.username}"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <TextView
                android:id="@+id/tv_recorded"
                style="@style/SiteDetailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_recorded"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <TextView
                android:id="@+id/recoreded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{User.recorded}"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_recorded" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
